--- a/proiect_EDR/docker-compose.yml
+++ b/proiect_EDR/docker-compose.yml
@@ -11,3 +11,13 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: example
     volumes:
       - ./mongo_data:/data/db
+  
+  proiect_edr:
+    image: proiect_edr
+    build: .
+    restart: always
+    ports:
+      - "8000:8000"
+    environment:
+      - MONGO_URL=mongodb://root:example@mongo:27017
+      
